--- a/src/App.scss
+++ b/src/App.scss
@@ -3,15 +3,14 @@ $borderColor: #2a2828;
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
 }
 
 body {
   // background-color: &$backgroundColor;
-  background-image: url('./asset/RPA.JPG');
-  height: 100%;
+  background-image: url('./asset/img-1.jpg');
 
   #root {
     display: flex;
@@ -26,6 +25,8 @@ body {
     margin: 0;
     color: #eee;
     opacity: 95%;
+    bottom: 0;
+    position: relative;
   }
 
   header {
@@ -33,7 +34,7 @@ body {
     border-bottom: 1px solid $borderColor;
     color: #eee;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 0;
     text-align: center;
     opacity: 95%;
   }
