--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 form {
   display: grid;
   margin: auto;
@@ -6,6 +7,33 @@ form {
   padding: 1em;
   background: #8b8b8b;
   opacity: 95%;
+}
+form .text {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1em;
+  align-items: center;
+  justify-items: center;
+  min-height: 100px;
+  outline: none;
+  resize: none;
+  font-family: monospace;
+  transition: background 0.25s, color 0.25s;
+}
+form .text:focus {
+  background: #4a4a4a;
+  color: #eeeeee;
+}
+form .text:hover {
+  background: #4a4a4a;
+  color: #eeeeee;
+}
+form .label-input-body {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1em;
+  margin-bottom: 1em;
+  min-height: 100px;
 }
 form .label-input {
   display: flex;
@@ -22,6 +50,7 @@ form .input {
   align-items: center;
 }
 form .btn {
+  cursor: pointer;
   border-radius: 15px;
   border: 1px solid #ccc;
   padding: 0.5em;
@@ -29,67 +58,53 @@ form .btn {
   justify-content: center;
   align-items: center;
 }
+form .btn:hover {
+  background: burlywood;
+}
 form label {
   display: flex;
+  flex-direction: row;
   margin: 1rem 0;
   justify-content: center;
   align-items: center;
 }
-form label.methods span {
-  cursor: pointer;
-  margin-right: 1rem;
-  padding: 0.25rem 0.5rem;
-  background: #8b8b8b;
+form label.custom-select {
+  padding: 0.5em;
+  position: relative;
+  display: block;
+  max-width: 500px;
+  min-width: 180px;
+  margin: 0 auto;
+  border: 1px solid #6c6b6e;
+  background-color: #39383a;
+  z-index: 10;
 }
-form label.methods #get {
-  border-radius: 40%;
-  border: 1px solid #8b8b8b;
-  color: #8b8b8b;
-  font-weight: bold;
-  margin-right: 1rem;
-  padding: 0.25rem 0.5rem;
-  background: green;
+form label.custom-select select {
+  border: none;
+  outline: none;
+  background: transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0;
+  margin: 0;
+  display: block;
+  width: 100%;
+  padding: 12px 55px 15px 15px;
+  font-size: 14px;
+  color: #714bb9;
 }
-form label.methods #get:hover {
-  background: lightgreen;
-  color: black;
-}
-form label.methods #post {
-  border-radius: 40%;
-  border: 1px solid #8b8b8b;
-  color: #8b8b8b;
-  font-weight: bold;
-  margin-right: 1rem;
-  padding: 0.25rem 0.5rem;
-  background: blue;
-}
-form label.methods #post:hover {
-  background: lightskyblue;
-  color: black;
-}
-form label.methods #put {
-  border-radius: 40%;
-  border: 1px solid #8b8b8b;
-  color: #8b8b8b;
-  font-weight: bold;
-  margin-right: 1rem;
-  padding: 0.25rem 0.5rem;
-  background: yellow;
-}
-form label.methods #put:hover {
-  background: lightgoldenrodyellow;
-  color: black;
-}
-form label.methods #delete {
-  border-radius: 40%;
-  border: 1px solid #8b8b8b;
-  color: #8b8b8b;
-  font-weight: bold;
-  margin-right: 1rem;
-  padding: 0.25rem 0.5rem;
-  background: red;
-}
-form label.methods #delete:hover {
-  background: lightcoral;
-  color: black;
+form label.custom-select select:after {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50px;
+  height: 100%;
+  line-height: 38px;
+  content: "∨";
+  text-align: center;
+  color: #714bb9;
+  font-size: 24px;
+  border-left: 1px solid #3c1c78;
+  z-index: -1;
 }/*# sourceMappingURL=form.css.map */
