--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
 html,
 body {
-  height: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
 }
 
 body {
   background-image: url("./asset/img-1.jpg");
-  height: 100%;
 }
 body #root {
   display: flex;
@@ -21,13 +20,15 @@ body footer {
   margin: 0;
   color: #eee;
   opacity: 95%;
+  bottom: 0;
+  position: relative;
 }
 body header {
   background: black;
   border-bottom: 1px solid #2a2828;
   color: #eee;
   padding: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 0;
   text-align: center;
   opacity: 95%;
 }
@@ -54,4 +55,4 @@ body header {
   margin: 10;
   padding: 0.5em;
   border: 10px solid #ccc;
-}/*# sourceMappingURL=App.css.map */
+}
