--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@ body {
 
 body {
   // background-color: &$backgroundColor;
-  background-image: url('./asset/img-1.jpg');
+  // background-image: url('./asset/img-1.jpg');
 
   #root {
     display: flex;
